k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: node_starter_template
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: node_starter_template
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
