k8s/svc_nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: node_starter_template
  namespace: default
spec:
  type: NodePort
  selector:
    name: node_starter_template
  ports:
    - name: http
      protocol: TCP
      port: 5000
      nodePort: 31001
